# TestTask_Flask-YD

./: .flaskenv  README.md  pyproject.toml
src/: __init__.py  main.py  settings.py
src/yandex_disc/: blueprint.py  services.py
src/yandex_disc/templates/yandex_disc/: index.html
